--- a/public/css/home.css
+++ b/public/css/home.css
@@ -138,6 +138,7 @@ html, body {
 .center-image {
     position: relative;
     padding-right: 10px;
+    height: 58px;
 }
 
 .center-image-newsletter {
