update layout dikit

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -125,7 +125,7 @@ body.menu-open {
 }
 
 .nav-item.active {
-    color: #ffffff;
+    color: #EFA32F;
     position: relative;
     transition: none;
 }
