update form platform

--- a/public/css/portfolio-show.css
+++ b/public/css/portfolio-show.css
@@ -35,7 +35,7 @@
     min-height: 560px;
     display: flex;
     flex-direction: column;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
