--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -49,7 +49,8 @@ body.menu-open {
 /* Logo */
 .logo {
     z-index: 1001;
-    padding-left: 20px; /* Desktop padding */
+    padding-left: 20px;
+    /* Desktop padding */
     margin-right: 100px;
 }
 
@@ -81,9 +82,18 @@ body.menu-open {
     transition: all 0.3s ease;
 }
 
-.menu-toggle span:nth-child(1) { top: 0; }
-.menu-toggle span:nth-child(2) { top: 50%; transform: translateY(-50%); }
-.menu-toggle span:nth-child(3) { bottom: 0; }
+.menu-toggle span:nth-child(1) {
+    top: 0;
+}
+
+.menu-toggle span:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.menu-toggle span:nth-child(3) {
+    bottom: 0;
+}
 
 .menu-toggle.active span:nth-child(1) {
     transform: rotate(45deg);
@@ -196,12 +206,15 @@ body.menu-open {
 /* Mobile Styles */
 @media (max-width: 1024px) {
     .logo {
-        padding-left: 25px; /* Mobile padding */
+        padding-left: 25px;
+        /* Mobile padding */
     }
 
     .nav-container {
-        padding: 0 16px 0 0; /* Adjust right padding for mobile */
+        padding: 0 16px 0 0;
+        /* Adjust right padding for mobile */
     }
+
     .menu-toggle {
         display: block;
     }
@@ -280,8 +293,10 @@ body.menu-open {
     color: white;
     padding: 60px 0 0px 0;
     font-family: 'Roboto', sans-serif;
-    margin: 60px 0 0 0 ; /* Add this */
-    width: 100%; /* Add this */
+    margin: 60px 0 0 0;
+    /* Add this */
+    width: 100%;
+    /* Add this */
 }
 
 .footer-container {
@@ -325,7 +340,7 @@ body.menu-open {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 700;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 .company-info p {
@@ -336,6 +351,14 @@ body.menu-open {
 }
 
 /* Middle and Right Columns */
+.footer-right {
+    text-align: right;
+}
+
+.footer-right-text {
+    padding-bottom: 5px;
+}
+
 .footer-links {
     font-family: 'Roboto', sans-serif;
     list-style: none;
@@ -344,7 +367,7 @@ body.menu-open {
 
 .footer-links li {
     font-family: 'Roboto', sans-serif;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .footer-links a {
@@ -360,12 +383,18 @@ body.menu-open {
     color: #ffd700;
 }
 
+.footer-middle {
+    justify-content: center;
+    text-align: left;
+    padding-left: 100px;
+}
+
 /* Certification Section */
 .footer-certification {
     grid-column: 1 / -1;
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    align-items: flex-end;
     gap: 20px;
     margin-top: -210px;
 }
@@ -389,12 +418,13 @@ body.menu-open {
 /* Copyright */
 .footer-copyright {
     font-family: 'Roboto', sans-serif;
-    text-align: center;
+    text-align: right;
     padding-top: 0;
-    margin-top: -30px;
+    margin-top: -10px;
     margin-bottom: 50px;
     color: #a0aec0;
     font-size: 14px;
+    padding-right: 175px;
 }
 
 /* Responsive Design */
