--- a/public/css/platform.css
+++ b/public/css/platform.css
@@ -965,7 +965,9 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 600px;
 }
+
 
 .headline-image {
     height: 200px;
@@ -1008,6 +1010,15 @@ html, body {
     max-width: 1600px;
     margin: 0 auto;
     padding: 0 40px;
+    color: #ffffff;
+}
+
+.headline-grid-one {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 0 40px;
 }
 
 .headline-grid-four {
@@ -1025,6 +1036,7 @@ html, body {
     margin-bottom: -10px;
     font-weight: 500;
 }
+
 
 .headline-card.middle-border {
     border-left: 1px solid var(--color-border);
