--- a/public/css/home.css
+++ b/public/css/home.css
@@ -164,6 +164,23 @@ html, body {
     padding: 0 var(--spacing-xl);
 }
 
+.headline-grid-two {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    max-width: var(--container-max-width);
+    margin: 0 auto;
+    padding: 0 var(--spacing-xl);
+}
+
+.subtitle-counter {
+    color: var(--color-gray-500);
+    font-size: var(--font-size-base);
+    font-family: var(--font-family);
+    color: var(--color-white);
+    text-align: center;
+}
+
 .headline-card-two {
     padding: 0 var(--spacing-lg);
     display: flex;
@@ -180,7 +197,7 @@ html, body {
 .counter {
     color: var(--color-secondary);
     font-size: var(--font-size-4xl);
-    margin: 20px 0 10px;
+    margin: 30px 0 0;
     font-weight: 500;
     text-align: center;
 }
@@ -188,6 +205,10 @@ html, body {
 .headline-card-two.middle-border {
     border-left: 1px solid var(--color-border);
     border-right: 1px solid var(--color-border);
+}
+
+.headline-card-two.left-border {
+    border-left: 1px solid var(--color-border);
 }
 
 /* ==========================================================================
