--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1198,12 +1198,14 @@ html, body {
 
 .team-card .background-image {
     position: absolute;
-    top: 0;
+    bottom: 120px;
+    top: -200px;
     left: 0;
-    width: 100%;
-    height: 420px;
+    width: 450px;
+    height: calc(100% + 400px);
+    object-fit: cover;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     z-index: 0;
 }
 
@@ -1269,6 +1271,19 @@ html, body {
     height: 352px;
     grid-column: span 1;
     border-radius: 12px;
+}
+
+.card-profile-photo {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 120px;
+    visibility: visible;
+    opacity: 1;
+    background: rgba(0, 0, 0, 1);
+    border: none;
+    padding: 0;
 }
 
 .card-ecosystem-hover {
