--- a/public/css/report.css
+++ b/public/css/report.css
@@ -311,8 +311,8 @@ body {
     left: var(--spacing-xl);
     color: var(--color-white);
     font-family: 'Avenir LT Std';
-    font-size: var(--font-size-xl);
-    font-weight: 500;
+    font-size: 36px;
+    font-weight: 600;
     text-transform: uppercase;
     z-index: var(--z-content);
 }
@@ -328,8 +328,8 @@ body {
 .card h2 {
     color: var(--color-white);
     font-family: 'Avenir LT Std';
-    font-size: var(--font-size-lg);
-    font-weight: 500;
+    font-size: 36px;
+    font-weight: 600;
     line-height: 1.3;
     margin: 0;
 }
@@ -450,7 +450,8 @@ body {
     }
 
     .card h2 {
-        font-size: var(--font-size-lg);
+        font-size: 36px;
+        font-weight: 600;
     }
 
     .date {
