--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1497,3 +1497,10 @@ html, body {
     color: #FFFFFF;
     padding-left: 50px;
 }
+
+.mandiri-team-group-title {
+    font-family: var(--font-family);
+    font-size: 32px;
+    color: #FFFFFF;
+    padding: 40px 0 10px 65px;
+}
