update large width

--- a/public/css/platform.css
+++ b/public/css/platform.css
@@ -1275,9 +1275,9 @@ html, body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
-    padding: 60px 20px 0;
-    max-width: 1600px;
-    margin: 60px 20px 0;
+    width: 100%;
+    padding: 60px 0px 0;
+    margin: 60px 0px 0;
     opacity: 1;
     transition: opacity 0.3s ease;
     background-color: #18181B ;
@@ -1339,7 +1339,6 @@ html, body {
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
     padding: 60px 20px;
-    max-width: 1600px;
     margin: 0px auto 0px auto;
     opacity: 1;
     transition: opacity 0.3s ease;
