--- a/public/css/portfolio-show.css
+++ b/public/css/portfolio-show.css
@@ -48,10 +48,7 @@
     display: grid;
     grid-template-columns: 1fr 200px;
     gap: 40px;
-    width: calc(100% - 40px);
-    margin-top: 50px;
-    margin-left: 40px;
-    margin-right: 0px;
+    margin: 50px auto ;
     background: transparent;
     max-width: 1440px;
 }
